experiement_output/error_log/nondex-cdecheng-gradle-netty.log
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task518/wd/NonDex-plugin-test/github.com/cdecheng/gradle-netty/src/main/java/com/dason/thrift/generated/PersonService.java:10: error: cannot find symbol
@javax.annotation.Generated(value = "Autogenerated by Thrift Compiler (0.13.0)", date = "2020-02-20")
                 ^
  symbol:   class Generated
  location: package javax.annotation
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task518/wd/NonDex-plugin-test/github.com/cdecheng/gradle-netty/src/main/java/com/dason/thrift/generated/Person.java:10: error: cannot find symbol
@javax.annotation.Generated(value = "Autogenerated by Thrift Compiler (0.13.0)", date = "2020-02-20")
                 ^
  symbol:   class Generated
  location: package javax.annotation
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task518/wd/NonDex-plugin-test/github.com/cdecheng/gradle-netty/src/main/java/com/dason/thrift/generated/DataException.java:10: error: cannot find symbol
@javax.annotation.Generated(value = "Autogenerated by Thrift Compiler (0.13.0)", date = "2020-02-20")
                 ^
  symbol:   class Generated
  location: package javax.annotation
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task518/wd/NonDex-plugin-test/github.com/cdecheng/gradle-netty/src/main/java/com/dason/protobuf/StudentServiceGrpc.java:23: error: cannot find symbol
@javax.annotation.Generated(
                 ^
  symbol:   class Generated
  location: package javax.annotation
4 errors

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler error output for details.

* Try:
Run with --stacktrace option to get the stack trace. Run with --info or --debug option to get more log output. Run with --scan to get full insights.

* Get more help at https://help.gradle.org

BUILD FAILED in 14s
